--- a/index.html
+++ b/index.html
@@ -8,38 +8,38 @@
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
   <body>
-    <div class="aaa">
+    <div class="header">
       <img src="./eisenhower-matrix.jpg">
       <a 
-          class="more-inf" 
+          class="header-inf" 
           href="https://goal-life.com/page/method/matrix-eisenhower">
           Want more details?
       </a>
     </div>
-    <div class="centered-main-page-element">
-      <p id="top-section-for-adding-element-to-list">
+    <div class="main">
+      <p id="add">
         <label for="new-task">Add Item</label>
-        <div class="task-row-wrapper">
+        <div class="task-wrapper">
           <input id="new-task"class="task" type="text">
           <button>Add</button>
         </div>
       </p>
       <h3>Todo</h3>
-      <ul id="incomplete-tasks">
+      <ul id="todo-tasks">
         <li>
           <input type="checkbox">
           <label class="task">Pay Bills</label>
           <input type="text" class="task">
-          <button class="edit">Edit</button>
+          <button class="button">Edit</button>
           <button class="delete">
             <img src="./remove.svg">
           </button>
         </li>
-        <li class="edit-mode">
+        <li class="edit">
           <input type="checkbox">
           <label class="task">Go Shopping</label>
           <input type="text" value="Go Shopping" class="task">
-          <button class="edit">Save</button>
+          <button class="button">Save</button>
           <button class="delete">
             <img src="./remove.svg">
           </button>
@@ -51,7 +51,7 @@
           <input type="checkbox" checked>
           <label class="task">See the Doctor</label>
           <input type="text" class="task">
-          <button class="edit">Edit</button>
+          <button class="button">Edit</button>
           <button class="delete">
             <img src="./remove.svg">
           </button>
