--- a/index.html
+++ b/index.html
@@ -2,61 +2,65 @@
 <html>
   <head>
     <title>Todo App</title>
-    <link 
-        href="https://fonts.googleapis.com/css?family=Lato:300,400,700" 
-        rel="stylesheet">
-    <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
+    <link
+      href="https://fonts.googleapis.com/css?family=Lato:300,400,700"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" media="screen" charset="utf-8" />
   </head>
   <body>
-    <div class="header">
-      <img src="./eisenhower-matrix.jpg">
-      <a 
-          class="header-inf" 
-          href="https://goal-life.com/page/method/matrix-eisenhower">
+    <div class="page">
+      <div class="header">
+        <img src="./eisenhower-matrix.jpg" />
+        <a
+          class="header-info"
+          href="https://goal-life.com/page/method/matrix-eisenhower"
+        >
           Want more details?
-      </a>
-    </div>
-    <div class="main">
-      <p id="add">
-        <label for="new-task">Add Item</label>
-        <div class="task-wrapper">
-          <input id="new-task"class="task" type="text">
-          <button>Add</button>
+        </a>
+      </div>
+      <div class="main">
+        <div id="add">
+          <label for="new-task" class="add-label">Add Item</label>
+          <div class="task-wrapper">
+            <input id="new-task" class="add-input task" type="text" />
+            <button class="button">Add</button>
+          </div>
         </div>
-      </p>
-      <h3>Todo</h3>
-      <ul id="todo-tasks">
-        <li>
-          <input type="checkbox">
-          <label class="task">Pay Bills</label>
-          <input type="text" class="task">
-          <button class="button">Edit</button>
-          <button class="delete">
-            <img src="./remove.svg">
-          </button>
-        </li>
-        <li class="edit">
-          <input type="checkbox">
-          <label class="task">Go Shopping</label>
-          <input type="text" value="Go Shopping" class="task">
-          <button class="button">Save</button>
-          <button class="delete">
-            <img src="./remove.svg">
-          </button>
-        </li>
-      </ul>
-      <h3>Completed</h3>
-      <ul id="completed-tasks">
-        <li>
-          <input type="checkbox" checked>
-          <label class="task">See the Doctor</label>
-          <input type="text" class="task">
-          <button class="button">Edit</button>
-          <button class="delete">
-            <img src="./remove.svg">
-          </button>
-        </li>
-      </ul>
+        <h3 class="title">Todo</h3>
+        <ul id="todo-tasks" class="list">
+          <li class="list-item">
+            <input type="checkbox" class="checkbox" />
+            <label class="label task">Pay Bills</label>
+            <input type="text" class="input task" />
+            <button class="button">Edit</button>
+            <button class="delete">
+              <img src="./remove.svg" />
+            </button>
+          </li>
+          <li class="list-item edit">
+            <input type="checkbox" class="checkbox" />
+            <label class="label task">Go Shopping</label>
+            <input type="text" value="Go Shopping" class="input task" />
+            <button class="button">Save</button>
+            <button class="delete">
+              <img src="./remove.svg" />
+            </button>
+          </li>
+        </ul>
+        <h3 class="title">Completed</h3>
+        <ul id="completed-tasks" class="list">
+          <li class="list-item">
+            <input type="checkbox" class="checkbox" checked />
+            <label class="label completed-label task">See the Doctor</label>
+            <input type="text" class="input task" />
+            <button class="button">Edit</button>
+            <button class="delete">
+              <img src="./remove.svg" />
+            </button>
+          </li>
+        </ul>
+      </div>
     </div>
     <script src="app.js"></script>
   </body>
